tests/valid/trait/assoc_projection_impl_trait_arg_compat.facet
trait Provider {
  type Item;
}

impl Provider for unrestricted isize {
  type Item = unrestricted bool;
}

trait Marker<T>;

impl Marker<unrestricted <unrestricted isize as Provider>::Item> for unrestricted isize;

fn need<T>(x: unrestricted T) -> unrestricted T where T: Marker<unrestricted bool> {
  x
}

fn main() -> unrestricted isize {
  (need<unrestricted isize> 1)
}
